--- a/WeatherApp/Views/Shared/_Layout.cshtml
+++ b/WeatherApp/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link href="~/StyleSheet.css" rel="stylesheet" />
-</head>s
+</head>
 <body>
     <div class="container">
         <div class="page-content">
