--- a/WeatherApp/Views/Weather/Details.cshtml
+++ b/WeatherApp/Views/Weather/Details.cshtml
@@ -5,18 +5,13 @@
 }
 
 
-<div class="box cursor-pointer w-30 margin-auto margin-top-200">
-    <div class="flex-borderless">
-        <div class="w-50">
-            <h2>@Model.CityName</h2>
-            <h4 class="text-grey">@Model.DateAndTime.ToString("dd MMM yyyy")</h4>
-            <h4 class="text-grey">@Model.DateAndTime.ToString("hh:mm tt")</h4>
-        </div>
-        <div class="w-50 border-left">
-            <h1 class="margin-left">@Model.TemperatureFahrenheit <sup class="text-grey">&#8457</sup></h1>
-        </div>
-    </div>
+@*<partial name="_WeatherCardPartialView" model="Model" />*@
+
+<div class=" cursor-pointer w-30 margin-auto margin-top-200">
+    <partial name="_WeatherCardPartialView" model="Model" />
+
 </div>
+
 
 <div class="text-center">
     <a href="~/">Back to Weather Home Page</a>
